DuPont DevSB/src/objects/pse__Work_Calendar__c.object
<CustomObject>
    <customHelpPage>pse__WorkCalendarHelp</customHelpPage>
    <description>Defines the standard working days, regular hours, and public holidays for a resource, region, practice or group.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Friday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Friday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Monday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Monday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Saturday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Standard_Hours_Per_Day__c</fullName>
        <defaultValue>8.0</defaultValue>
        <description>This optional value determines the &quot;standard&quot; hours per day figure (e.g. typically 8.0 for many U.S. Work Calendars) to be used to convert between daily and hourly rates on an Assignment.  If left blank or zero, the org-wide default will be used.</description>
        <inlineHelpText>This optional value determines the &quot;standard&quot; hours per day figure (e.g. typically 8.0 for many U.S. Work Calendars) to be used to convert between daily and hourly rates on an Assignment.  If left blank or zero, the org-wide default will be used.</inlineHelpText>
        <label>Standard Hours Per Day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Thursday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Week_Start_Day__c</fullName>
        <inlineHelpText>Select the day of the week your region&apos;s calendar starts on.</inlineHelpText>
        <label>Week Start Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                    <default>true</default>
                    <label>Sunday</label>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Week_Total_Hours__c</fullName>
        <formula>pse__Monday_Hours__c + pse__Tuesday_Hours__c + pse__Wednesday_Hours__c + pse__Thursday_Hours__c + pse__Friday_Hours__c + pse__Saturday_Hours__c + pse__Sunday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Work Calendar</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Sunday_Hours__c</columns>
        <columns>pse__Monday_Hours__c</columns>
        <columns>pse__Tuesday_Hours__c</columns>
        <columns>pse__Wednesday_Hours__c</columns>
        <columns>pse__Thursday_Hours__c</columns>
        <columns>pse__Friday_Hours__c</columns>
        <columns>pse__Saturday_Hours__c</columns>
        <columns>pse__Week_Start_Day__c</columns>
        <columns>pse__Week_Total_Hours__c</columns>
        <columns>pse__Standard_Hours_Per_Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Calendars</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>pse__Check_Hours</fullName>
        <active>true</active>
        <errorConditionFormula>OR(pse__Sunday_Hours__c &lt; 0, pse__Sunday_Hours__c &gt; 24, pse__Monday_Hours__c &lt; 0, pse__Monday_Hours__c &gt; 24, pse__Tuesday_Hours__c &lt; 0, pse__Tuesday_Hours__c &gt; 24, pse__Wednesday_Hours__c &lt; 0, pse__Wednesday_Hours__c &gt; 24, pse__Thursday_Hours__c &lt; 0, pse__Thursday_Hours__c &gt; 24, pse__Friday_Hours__c &lt; 0, pse__Friday_Hours__c &gt; 24, pse__Saturday_Hours__c &lt; 0, pse__Saturday_Hours__c &gt; 24)</errorConditionFormula>
        <errorMessage>Hours cannot be negative or greater than 24.</errorMessage>
    </validationRules>
</CustomObject>